# Iraka

./: .gitignore  main.py  pyproject.toml  requirements.txt
iraka/: manage.py
iraka/contenido/: admin.py  models.py  urls.py  views.py
iraka/contenido/migrations/: 0001_initial.py
iraka/iraka/: asgi.py  settings.py  urls.py  wsgi.py
iraka/templates/: base.html  inicio.html
